Fixing things for running on the adblaster machine.
git-svn-id: file:///var/svn/nexopia/trunk/adblaster@6442 7be605d3-0650-4ba7-bb8c-0af3a60b5258